# Quantum-Annealed-Hyper-Search

./: .master_key  .quantum_security_key  API_REFERENCE.md  ARCHITECTURE.md  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_COMPLETION_SUMMARY.md  AUTONOMOUS_SDLC_DOCUMENTATION.md  AUTONOMOUS_SDLC_EXECUTION_REPORT.md  AUTONOMOUS_SDLC_FINAL_COMPLETION.md  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  ENTERPRISE_DEPLOYMENT_GUIDE.md  FINAL_AUTONOMOUS_SDLC_COMPLETION_REPORT.md  MANIFEST.in  Makefile  PROJECT_CHARTER.md  README.md  RESEARCH_DOCUMENTATION.md  RESEARCH_PUBLICATION_DOCUMENTATION.md  benchmark_quantum_advantage.py  breakthrough_quantum_validation_report.json  comprehensive_research_benchmark_suite.py  comprehensive_security_framework.py  comprehensive_security_validation.json  deployment_report_deploy_1755203563.json  deployment_report_deploy_1755318272.json  deployment_report_ebae85c0ea50bccb.json  deployment_report_f06d94e4a303d9d7.json  deployment_report_qhs-deploy-1756166043.json  deployment_summary.json  docker-compose.production.yml  docker-compose.yml  enterprise_quantum_deployment_orchestrator.py  final_production_deployment.py  global_deployment_report.json  global_quantum_deployment_framework.py  production_config.json  production_deployment_orchestrator.py  production_quality_gates_report.json  (+44 more)
.github/workflows/: ci.yml
deployment/: PRODUCTION_DEPLOYMENT.md  advanced_production_orchestrator.py  autonomous_production_orchestrator.py  docker-compose.production.yml  production_orchestrator.py  production_ready_deployment.py  simplified_production_deployment.py
deployment/backup/: backup.sh  disaster_recovery_plan.md
deployment/docs/: api_documentation.md  production_runbook.md
deployment/infrastructure/: ansible_template.yml  cloudformation_template.yaml  kubernetes_template.yaml  terraform_template.tf
deployment/kubernetes/: production.yaml
deployment/monitoring/: prometheus.yml  quantum_dashboard.json
deployment/production/: docker-compose.production.yml  kubernetes-deployment.yaml
deployment/scripts/: deploy.sh  rollback.sh
deployment/security/: security_checklist.md  ssl_configuration.md
docs/: ROADMAP.md
docs/adr/: 001-quantum-classical-hybrid-architecture.md  template.md
examples/: __init__.py  advanced_optimization.py  basic_usage.py  production_example.py
helm/quantum-hyper-search/: Chart.yaml  values.yaml
kubernetes/: deployment.yaml  hpa.yaml  service.yaml
monitoring/: monitoring-config.yaml
qahs/: __init__.py  demo.py  optuna_interface.py  qubo.py  sa_solver.py
quantum_dev/: pyvenv.cfg
quantum_env/test_env/: pyvenv.cfg
quantum_env_auto/: pyvenv.cfg
quantum_env_new/: pyvenv.cfg
quantum_env_test/: pyvenv.cfg
quantum_hyper_search/: __init__.py  enterprise_main.py  main.py  optimized_main.py  robust_main.py  secure_main.py  simple_main.py
quantum_hyper_search/backends/: __init__.py  backend_factory.py  base_backend.py  dwave_backend.py  simple_simulator.py  simulator.py  simulator_backend.py
quantum_hyper_search/core/: __init__.py  base.py  optimization_history.py  quantum_hyper_search.py  qubo_encoder.py  qubo_formulation.py
quantum_hyper_search/deployment/: __init__.py  docker.py  kubernetes.py  load_balancer.py  monitoring.py
quantum_hyper_search/localization/: __init__.py  compliance_regions.py  global_deployment_manager.py  i18n_manager.py
quantum_hyper_search/monitoring/: __init__.py  health_check.py  performance_monitor.py
quantum_hyper_search/optimization/: __init__.py  adaptive_resource_management.py  adaptive_strategies.py  caching.py  distributed_quantum_cluster.py  distributed_quantum_optimization.py  multi_scale_optimizer.py  parallel.py  parallel_optimization.py  performance_accelerator.py  quantum_advantage_accelerator.py  quantum_gpu_acceleration_framework.py  scaling.py  strategies.py  ultra_high_performance_quantum_cluster.py
quantum_hyper_search/research/: adaptive_qubo_strategies.py  adaptive_strategies.py  benchmarking_suite.py  breakthrough_quantum_neural_architecture_search.py  experimental_framework.py  novel_encodings.py  quantum_adiabatic_optimization.py  quantum_advantage_accelerator.py  quantum_advantage_analyzer.py  quantum_bayesian_optimization.py  quantum_coherence_dynamics_optimization.py  quantum_coherence_echo_optimization.py  quantum_coherence_optimizer.py  quantum_error_corrected_optimization.py  quantum_error_correction.py  quantum_machine_learning_bridge.py  quantum_meta_learning_transfer.py  quantum_meta_learning_zero_shot.py  quantum_ml_integration.py  quantum_parallel_tempering.py  quantum_reinforcement_learning.py  quantum_research_benchmark.py  quantum_topological_advantage.py  quantum_topological_optimization.py  quantum_variational_optimization.py  quantum_walk_optimizer.py  topological_quantum_reinforcement_learning.py  topological_quantum_reinforcement_learning_enhanced.py
quantum_hyper_search/security/: __init__.py  authentication.py  authorization.py  compliance.py  encryption.py  quantum_security_framework.py
quantum_hyper_search/utils/: __init__.py  advanced_monitoring.py  advanced_validation.py  comprehensive_monitoring.py  comprehensive_validation.py  comprehensive_validation_framework.py  enhanced_security.py  enterprise_scaling.py  enterprise_security.py  logging.py  logging_config.py  metrics.py  monitoring.py  robust_error_handling.py  robust_monitoring.py  robust_quantum_error_handling.py  security.py  validation.py
research/: literature_review.md  research_summary.md
scripts/: benchmark.py  security_scan.py
tests/: __init__.py  test_advanced_research_capabilities.py  test_basic_functionality.py  test_comprehensive.py  test_comprehensive_quality_gates.py  test_integration.py  test_qahs.py  test_quality_gates.py  test_robust_functionality.py
