[metadata]
name = quantum-annealed-hyper-search
version = 0.1.0
author = Daniel Schmidt
author_email = daniel@terragonlabs.com
description = Hybrid quantum-classical library for hyperparameter optimization using D-Wave quantum annealers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/danieleschmidt/quantum-annealed-hyper-search
project_urls =
    Bug Reports = https://github.com/danieleschmidt/quantum-annealed-hyper-search/issues
    Source = https://github.com/danieleschmidt/quantum-annealed-hyper-search
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.21.0
    scipy>=1.7.0
    scikit-learn>=1.0.0
    dwave-ocean-sdk>=6.0.0
    dimod>=0.12.0
    networkx>=2.6
    matplotlib>=3.5.0
    pandas>=1.3.0
    joblib>=1.1.0
    tqdm>=4.62.0

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    pytest-xdist>=3.0.0
    black>=22.0.0
    isort>=5.10.0
    flake8>=5.0.0
    mypy>=0.991
    pre-commit>=2.20.0
dwave =
    dwave-system>=1.19.0
    dwave-hybrid>=0.6.0
    dwave-preprocessing>=0.6.0
simulators =
    dwave-neal>=0.6.0
    qbsolv>=0.3.0
optuna =
    optuna>=3.0.0
ray =
    ray[tune]>=2.0.0
monitoring =
    psutil>=5.8.0
    prometheus-client>=0.14.0
all =
    quantum-annealed-hyper-search[dev,dwave,simulators,optuna,ray,monitoring]

[options.packages.find]
exclude =
    tests*
    docs*
    examples*

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = 
    --cov=quantum_hyper_search
    --cov-report=html
    --cov-report=term-missing
    --cov-report=xml
    --strict-markers
    --disable-warnings
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')
    integration: marks tests as integration tests
    quantum: marks tests that require quantum backend

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = 
    .git,
    __pycache__,
    .venv,
    venv,
    build,
    dist,
    *.egg-info

[mypy]
python_version = 3.8
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = tests/

[isort]
profile = black
line_length = 88
multi_line_output = 3